[package]
name = "terminus"
version = "2.8.0"
edition = "2021"
description = "CLI tool for HTTP endpoint testing with HTTP/2 desync detection, security analysis, passive vulnerability detection, smart diffing, and multi-format support."
license = "GPL-3.0"
authors = ["Gilles Biagomba<gilles.infosec@gmail.com>"]
repository = "https://github.com/your_github/terminus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking", "cookies", "http2"] }
rayon = "1.5.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.10"
atty = "0.2"
rand = "0.9"

[build-dependencies]