[package]
name = "terminus"
version = "2.11.0"
edition = "2021"
description = "CLI tool for HTTP endpoint testing with HTTP/2 desync detection, security analysis, passive vulnerability detection, smart diffing, multi-threading, and enhanced reporting."
license = "GPL-3.0"
authors = ["Gilles Biagomba<gilles.infosec@gmail.com>"]
repository = "https://github.com/gbiagomba/terminus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "cookies", "http2"] }
rayon = "1.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.39", features = ["serialize"] }
regex = "1.11"
rand = "0.9"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = "0.4"

[build-dependencies]